--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,22 @@ body {
 }
 .title {
 	padding-top: 30px;
+	display: block;
 }
 
 .brand {
 	display: inline-block;
-	width: 200px;
-	height: 50px;
-	text-align: center;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    padding: 5px;
+    border: 2px solid #d5cbcb;
+    border-radius: 25px;
+    background-color: rgb(90 205 173 / 24%);
 }
+
 .brand-name {
+	display: inline-block;
 	font-size: 2rem;
 	padding-top: 5px;
 	font-weight: 900;
@@ -30,6 +37,26 @@ body {
 	position: relative;
 	float: left;
 	padding-left: 15px;
+}
+.navigation {
+	display: inline-block;
+    width: 500px;
+    height: 50px;
+    text-align: center;
+    padding: 5px;
+    border: 2px solid #d5cbcb;
+    border-radius: 25px;
+    background-color: rgb(90 205 173 / 24%);
+}
+
+.nav-item {
+	/*display: inline-block;
+	margin-top: 20px;*/
+	display: inline-block;
+	width: 100px;
+	font-size: 1rem;
+	padding: 20px;
+	font-weight: 900;
 }
 
 .temp-text {
